// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconsRow renders icons when props are given 1`] = `
<div>
  <div
    class="iconsRow undefined"
  >
    <div
      class="link"
    >
      <button
        class="button false primary md false  "
        type="button"
      >
        <p
          class="label"
        >
          title
        </p>
      </button>
    </div>
    <p
      class="text"
    />
    <a
      href="linkedInLink"
    >
      <svg
        class="icon"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.47,2H3.53A1.45,1.45,0,0,0,2.06,3.43V20.57A1.45,1.45,0,0,0,3.53,22H20.47a1.45,1.45,0,0,0,1.47-1.43V3.43A1.45,1.45,0,0,0,20.47,2ZM8.09,18.74h-3v-9h3ZM6.59,8.48h0a1.56,1.56,0,1,1,0-3.12,1.57,1.57,0,1,1,0,3.12ZM18.91,18.74h-3V13.91c0-1.21-.43-2-1.52-2A1.65,1.65,0,0,0,12.85,13a2,2,0,0,0-.1.73v5h-3s0-8.18,0-9h3V11A3,3,0,0,1,15.46,9.5c2,0,3.45,1.29,3.45,4.06Z"
        />
      </svg>
    </a>
    <a
      href="facebookLink"
    >
      <svg
        class="icon"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.12,5.32H17V2.14A26.11,26.11,0,0,0,14.26,2C11.54,2,9.68,3.66,9.68,6.7V9.32H6.61v3.56H9.68V22h3.68V12.88h3.06l.46-3.56H13.36V7.05C13.36,6,13.64,5.32,15.12,5.32Z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`IconsRow renders no icons when no props are given IconsRow 1`] = `
<div>
  <div
    class="iconsRow undefined"
  >
    <div
      class="link"
    >
      <button
        class="button false primary md false  "
        type="button"
      >
        <p
          class="label"
        >
          title
        </p>
      </button>
    </div>
    <p
      class="text"
    />
    <a
      href="linkedInLink"
    >
      <svg
        class="icon"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20.47,2H3.53A1.45,1.45,0,0,0,2.06,3.43V20.57A1.45,1.45,0,0,0,3.53,22H20.47a1.45,1.45,0,0,0,1.47-1.43V3.43A1.45,1.45,0,0,0,20.47,2ZM8.09,18.74h-3v-9h3ZM6.59,8.48h0a1.56,1.56,0,1,1,0-3.12,1.57,1.57,0,1,1,0,3.12ZM18.91,18.74h-3V13.91c0-1.21-.43-2-1.52-2A1.65,1.65,0,0,0,12.85,13a2,2,0,0,0-.1.73v5h-3s0-8.18,0-9h3V11A3,3,0,0,1,15.46,9.5c2,0,3.45,1.29,3.45,4.06Z"
        />
      </svg>
    </a>
  </div>
</div>
`;
